# mera

./: .env.example  .npmrc  CODEOWNERS  IAC.json  PolarisMetadata.json  batch_word_extract_to_excel.py  deploy-config.json  nx.json  package-lock.json  package.json  requirements.txt  tsconfig.base.json
.devcontainer/: devcontainer.json  docker-compose.local.yml
.github/: copilot-instructions.md
.github/tech-stack/: python.techstack.md
.github/workflows/: cicd.yml  deploy.yml
apps/api/: .gitignore  README.md  job_matching_candidates.xlsx  pip.conf  project.json  pyproject.toml  requirements.in  requirements.txt  run.bat  run.py  run.sh
apps/api/data/: 2026-Mercer-Job-Library-Catalog.xlsx  Job Matching Train Data - 800 Examples.xlsx  job_families.xlsx
apps/api/scripts/: batch_word_extract_to_excel.py
apps/api/src/: .env.development  main.py
apps/api/src/agents/: ClassificationAgent.py  ConversationalFeedbackAgent.py  DataIngestionPreprocessAgent.py  ExplainabilityAuditAgent.py  FusionAgent.py  JobDescriptionGenerationAgent.py  JobGradingAgent.py  JobMatchingAgent.py  MercerWorkbookIngestionAgent.py  TaxonomySynonymsAgent.py  ValidatorAgent.py  base.py  explainability.py  feedback.py  fusion.py  ingestion.py  job_description.py  job_grading.py  job_matching.py  mercer_workbook_ingestion.py  taxonomy.py  validator.py
apps/api/src/auth_guard/: okta_auth_guard.py
apps/api/src/clients/: core_api.py  doc_processing_api.py  http_base.py
apps/api/src/controller/task/: task_controller.py
apps/api/src/core/: audit.py  config.py  logging.py  security.py
apps/api/src/orchestrator/: graph.py  state.py
apps/api/src/repository/: mongo_repository.py  repository.py
apps/api/src/routes/: jobs.py  match_result.py  projects.py  routes.py
apps/api/src/schemas/: common.py  llm_schema.py  requests.py  responses.py  task_schema.py
apps/api/src/services/: README_HISTORY.md  embedding_cache.py  history.py  hybrid_search_service.py  init_history_indexes.py  metrics.py  mmc_jobs.py  mmc_project.py
apps/api/src/services/jobmatching/: HYBRID_SCORING_README.md  IMPLEMENTATION_SUMMARY.md  README.md  RUN_STEPS.md  create_indexes.py  create_mjl.py  data_ingestion.py  example_hybrid_scoring.py  extraction_service.py  hybrid_search.py  hybrid_semantic_scoring.py
apps/api/src/services/mjl/: job_families_embedding_to_mongo.py  match_result.py  migrate_mercer_to_mongo.py
apps/api/src/services/mjl/feedback/: learn.py  training.py
apps/api/src/services/mjl/indexes/: indexes.py
apps/api/src/services/mjl/search/: context_search.py
apps/api/src/tests/: config_service_test.py  okta_auth_guard_test.py  siem_logger_test.py  tracing_test.py
apps/api/src/utility/: helper.py  job_families_taxonomy.py
apps/api/src/utils/: config_service.py  formatter_exception_filter.py  text_utils.py  tracing.py
apps/api/src/utils/logging/: siem_event.py  siem_logger.py
apps/ui/: project.json  tsconfig.app.json
apps/ui-e2e/src/integration/: app.spec.ts  task-management.spec.ts
apps/ui/src/: index.html  styles.scss
apps/ui/src/app/: app-routing.module.spec.ts  app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
apps/ui/src/app/features/home/: home.component.html
apps/ui/src/app/features/task-management/: task-management.component.spec.ts
apps/ui/src/app/features/task-management/components/task-details/: task-details.component.spec.ts
apps/ui/src/app/features/task-management/components/task-list/: task-list.component.spec.ts
apps/ui/src/environments/: environment.prod.ts  environment.ts
deployments/config/: dev-api.config  dev-ui.config
deployments/docker/: Dockerfile.api  Dockerfile.ui
libs/shared/angular-utils/src/auth/: auth.interceptor.ts
libs/shared/config/: project.json
libs/shared/config/src/: index.ts
libs/shared/styles/app/: _app.scss  _footer.scss  _navbar.scss
libs/shared/utils/cypress/: project.json
libs/shared/utils/cypress/src/lib/: checkElementDimensionsMatchExpected.spec.ts
libs/shared/utils/testing/: project.json
