[project]
name = "api"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Polaris Team", email = "MMCGLPolarisContactUs@mmc.com" }
]

dependencies = [
    "acachecontrol==0.3.6",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "black==25.12.0",
    "bytecode==0.17.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "coverage[toml]==7.13.1",
    "cryptography==46.0.3",
    "ddtrace==4.1.1",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "dnspython==2.8.0",
    "envier==0.6.1",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fastapi==0.128.0",
    "filelock==3.20.2",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "iniconfig==2.3.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "langchain-core==1.2.6",
    "langgraph==1.0.5",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.3.1",
    "langsmith==0.6.0",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "motor==3.7.1",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numpy==2.4.0",
    "okta-jwt-verifier==0.3.0",
    "opentelemetry-api==1.39.1",
    "orjson==3.11.5",
    "ormsgpack==1.12.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.2.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pymongo==4.15.5",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "pytokens==0.3.0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "retry2==0.9.5",
    "ruff==0.14.10",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "sentence-transformers==5.2.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.57.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "uuid-utils==0.12.0",
    "uvicorn==0.40.0",
    "wcwidth==0.2.14",
    "wrapt==2.0.1",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
    "rapidfuzz>=3.6.0"
]

[project.scripts]
api = "src.main:start"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.4.2",
    "coverage>=7.8.0",
    "yarl>=1.18.3",
    "attrs>=25.3.0",
    "aiohappyeyeballs>=2.6.1",
    "aiosignal>=1.3.2",
    "ruff>=0.11.13",
]

# Build configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# uv configuration
[tool.uv]
default-groups = ["dev"]

# Primary package index (MMC Artifactory)
[[tool.uv.index]]
name = "mmc-artifactory"
url = "https://mgti-dal-so-art.mrshmc.com/artifactory/api/pypi/pypi/simple"
default = true


# Pytest settings
[tool.pytest.ini_options]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
python_files = ["*_test.py"]
testpaths = ["src"]
asyncio_mode = "auto"
addopts = "--capture=tee-sys"

# Ruff linting rules
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite",
    ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox",
    ".pants.d", ".pyenv", ".pytest_cache", ".pytype",
    ".ruff_cache", ".svn", ".tox", ".venv", ".vscode",
    "__pypackages__", "_build", "buck-out", "build",
    "dist", "node_modules", "site-packages", "venv",
]

[tool.ruff.lint]
select = ["W", "E7", "E9"]
ignore = ["E402", "E722"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
